<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Light Droid</string>
    <string name="appIcon">Application Icon</string>
    <string name="cameraIcon">Camera Icon</string>
    <string name="manageButton">Manage</string>
    <string name="addBlacklist">Add to Blacklist</string>
    <string name="addWhitelist">Add to Whitelist</string>
    <string name="removeBlacklist">Remove from Blacklist</string>
    <string name="removeWhitelist">Remove from Whitelist</string>
    <string name="filter">Filter</string>
    <string name="rescan">Rescan</string>
    <string name="addPermission">Add Permission</string>
    <string name="permissionName">Permission Name:</string>
    <string name="permissionRisk">Permission Risk:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    
    
    <string-array name="drawerStrings">
        <item>Overall Ratings</item>
        <item>Application Ratings</item>
        <item>Edit Permissions</item>
    </string-array>
</resources>
